# src/main/java/kr/ac/kopo/ttd/dto/SubscriptionSubscribeRequest.java
@@ -1,0 +1,5 @@
+package kr.ac.kopo.ttd.dto;
+
+import jakarta.validation.constraints.NotBlank;
+
+public record SubscriptionSubscribeRequest(@NotBlank String billingKey) {}
